# blossom-fire-demo

./: .gitignore  Caddyfile  FSD.md  README.md  blossom-fire-slides.html  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  tests-admin-adminkey-filtering.mjs  tests-admin-adminkey-order-dedupe.mjs  tests-admin-dm-toggle.mjs  tests-admin-pinned-broadcaster.mjs  tests-contextvm-policy.mjs  tests-debug-dm-recv.mjs  tests-dm-content-schema.mjs  tests-e2e-fire.mjs  tests-frame-key-forwarding-regression.mjs  tests-media-pipeline.mjs  tests-nip17-e2e.mjs  tests-nip17-live.mjs  tests-nip17-local.mjs  tests-nip17-signatures.mjs  tests-nip17-wrap-helper.mjs  tests-pushstr-admin-schema-compat.mjs  tests-pushstr-dm-classifier.mjs  tests-pushstr-envelope-classifier.mjs  tests-pushstr-rumor-parse.mjs  tests-query-event-by-id.mjs  tests-send-admin-command.mjs  tests-send-adminkey-to-admin.mjs  tests-send-dm-to-target.mjs  tests-threshold-controls.mjs  tests-viewer-decrypt-flow.mjs  update-nip17.sh
blob/: server.js
docs/: messages.md  mls-plan.md
mls-wasm/: Cargo.toml
mls-wasm/src/: lib.rs
relay/: config.toml
scripts/: build-mls.sh  build-web-deps.mjs  nip17-wrap.mjs
tests/: e2e.mjs
web/: admin-gate.js  admin.html  announcement.js  blob.js  broadcast-llhls.html  broadcast-video.html  broadcast.html  config.js  context-threshold.js  contextvm-sdk.js  contextvm.js  crypto.js  deriveChunkKey.js  dm-test.html  index.html  mls.js  mls_dummy.js  mse-pump.js  nip17.js  nip44wrap.js  pushstr-dm-adapter.js  util.js  view-llhls.html  (+2 more)
(+19 files in other folders)
