[package]
name = "mls_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }

openmls = { version = "0.6", default-features = false, features = ["js"] }
openmls_basic_credential = "0.3"
openmls_rust_crypto = "0.3"
openmls_traits = "0.3"
tls_codec = "0.4"

[profile.release]
opt-level = "s"
